parsed the barrier